--- a/03-Pandas_and_DTM/01-DTM_DistinctiveWords.ipynb
+++ b/03-Pandas_and_DTM/01-DTM_DistinctiveWords.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we read our music reviews corpus, which is stored as a .csv file on our hard drive, into a Pandas dataframe. "
+    "First, we read a music reviews corpus, which is stored as a .csv file on our hard drive, into a Pandas dataframe. These data were collected from MetaCritic.com, and include all user reviews of albums from the start of the website through 2014."
    ]
   },
   {
@@ -99,9 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#print the first review from the column 'body'\n",
@@ -132,10 +130,7 @@
    },
    "outputs": [],
    "source": [
-    "#Write your code here\n",
-    "#print(df['genre'].value_counts())\n",
-    "#print(df['critic'].value_counts())\n",
-    "#print(df['artist'].value_counts())"
+    "#Write your code here"
    ]
   },
   {
@@ -176,9 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#import the function CountVectorizer\n",
@@ -200,9 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(countvec.get_feature_names()[:10])"
@@ -220,9 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#we do the same as we did above, but covert it into a Pandas dataframe. Note this takes quite a bit more memory, so will not be good for bigger data.\n",
@@ -251,9 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(dtm_df.sum().sort_values(ascending=False))"
@@ -269,9 +256,7 @@
    "outputs": [],
    "source": [
     "##Ex: print the average number of times each word is used in a review\n",
-    "#Print this out sorted from highest to lowest.\n",
-    "\n",
-    "print(dtm_df.mean().sort_values(ascending=False))"
+    "#Print this out sorted from highest to lowest."
    ]
   },
   {
@@ -322,7 +307,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -349,9 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(dtm_tfidf_df.max().sort_values(ascending=False)[:20])"
@@ -378,35 +360,24 @@
    "source": [
     "What can we do with this? These scores are best used when you want to identify distinctive words for individual documents, or groups of documents, compared to other groups or the corpus as a whole. To illustrate this, let's compare three genres and identify the most distinctive words by genre.\n",
     "\n",
-    "First we merge the genre of the document into our dtm weighted by tf-idf scores, and then compare genres."
+    "First we add the genre of the document into our dtm weighted by tf-idf scores, and then compare genres."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "#creat dataset with document index and genre\n",
-    "df_genre = df['genre'].to_frame()\n",
-    "print(df_genre)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#merge this into the dtm_tfidf_df\n",
-    "merged_df = df_genre.join(dtm_tfidf_df, how = 'right', lsuffix='_x')\n",
+    "#Copy our tfidf df to a new df to add genre\n",
+    "dtm_tfidf_df_genre = dtm_tfidf_df\n",
+    "#add a 'GENRE' column to our tfidf df\n",
+    "dtm_tfidf_df_genre['GENRE'] = df['genre']\n",
+    "#Question: Why is 'GENRE' in caps?\n",
     "\n",
-    "#view result\n",
-    "merged_df"
+    "dtm_tfidf_df_genre"
    ]
   },
   {
@@ -421,33 +392,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#pull out the reviews for three genres, Rap, Alternative/Indie Rock, and Jazz\n",
-    "dtm_rap = merged_df[merged_df['genre_x']==\"Rap\"]\n",
-    "dtm_indie = merged_df[merged_df['genre_x']==\"Alternative/Indie Rock\"]\n",
-    "dtm_jazz = merged_df[merged_df['genre_x']==\"Jazz\"]\n",
-    "\n",
-    "#print the words with the highest tf-idf scores for each genre\n",
-    "print(\"Rap Words\")\n",
-    "print(dtm_rap.max"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#pull out the reviews for three genres, Rap, Alternative/Indie Rock, and Jazz\n",
-    "dtm_rap = merged_df[merged_df['genre_x']==\"Rap\"]\n",
-    "dtm_indie = merged_df[merged_df['genre_x']==\"Alternative/Indie Rock\"]\n",
-    "dtm_jazz = merged_df[merged_df['genre_x']==\"Jazz\"]\n",
+    "dtm_rap = dtm_tfidf_df_genre[dtm_tfidf_df_genre['GENRE']==\"Rap\"]\n",
+    "dtm_indie = dtm_tfidf_df_genre[dtm_tfidf_df_genre['GENRE']==\"Alternative/Indie Rock\"]\n",
+    "dtm_jazz = dtm_tfidf_df_genre[dtm_tfidf_df_genre['GENRE']==\"Jazz\"]\n",
     "\n",
     "#print the words with the highest tf-idf scores for each genre\n",
     "print(\"Rap Words\")\n",
@@ -511,17 +462,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
     "\n",
     "text_list = []\n",
     "#open and read the novels, save them as variables\n",
-    "austen_string = open('../data/Austen_PrideAndPrejudice.txt', encoding='utf-8').read()\n",
-    "alcott_string = open('../data/Alcott_GarlandForGirls.txt', encoding='utf-8').read()\n",
+    "austen_string = open('../Data/Austen_PrideAndPrejudice.txt', encoding='utf-8').read()\n",
+    "alcott_string = open('../Data/Alcott_GarlandForGirls.txt', encoding='utf-8').read()\n",
     "\n",
     "#append each novel to the list\n",
     "text_list.append(austen_string)\n",
@@ -539,9 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "novels_df = pandas.DataFrame(countvec.fit_transform(text_list).toarray(), columns=countvec.get_feature_names())\n",
@@ -562,9 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "novels_df['word_count'] = novels_df.sum(axis=1)\n",
@@ -581,9 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "novels_df = novels_df.iloc[:,:].div(novels_df.word_count, axis=0)\n",
@@ -600,9 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "novels_df.loc[2] = novels_df.loc[0] - novels_df.loc[1]\n",
@@ -619,9 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "novels_df.loc[2].sort_values(ascending=False)"
@@ -641,9 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#change stop_words option to 'english\n",
@@ -669,9 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Change max_df option to 1\n",
