--- a/04-Dictionaries/00-DictionaryMethod.ipynb
+++ b/04-Dictionaries/00-DictionaryMethod.ipynb
@@ -111,9 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#import the necessary packages\n",
@@ -152,9 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#tokenize\n",
@@ -167,9 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "punctuations = list(string.punctuation)\n",
@@ -193,9 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df['token_count'] = df['body_tokens'].apply(lambda x: len(x))\n",
@@ -223,9 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pos_sent = open(\"../Data/positive_words.txt\", encoding='utf-8').read()\n",
@@ -238,9 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#remember the split function? We'll split on the newline character (\\n) to create a list\n",
@@ -256,9 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#count number of words in each list\n",
@@ -282,42 +268,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#exercise code here\n",
-    "df['pos_num'] = df['body_tokens'].apply(lambda x: len([word for word in x if word in positive_words]))\n",
-    "df['neg_num'] = df['body_tokens'].apply(lambda x: len([word for word in x if word in negative_words]))\n",
-    "\n",
-    "df['pos_prop'] = df['pos_num']/df['token_count']\n",
-    "df['neg_prop'] = df['neg_num']/df['token_count']\n",
-    "df.drop('release_date', axis=1, inplace=True)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "grouped = df.groupby('genre')\n",
-    "grouped['pos_prop'].mean().sort_values(ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "grouped['score'].mean().sort_values(ascending=False)"
+    "#exercise code here\n"
    ]
   },
   {
@@ -345,9 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#import the function CountVectorizer\n",
@@ -370,9 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#create a columns variable that is a list of all column names\n",
@@ -383,9 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#create a new variable that contains only column names that are in our postive words list\n",
@@ -396,9 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#create a dtm from our dtm_df that keeps only positive sentiment columns\n",
@@ -409,9 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#count the number of positive words for each document\n",
