--- a/04-Dictionaries/00-DictionaryMethod_ExerciseSolutions.ipynb
+++ b/04-Dictionaries/00-DictionaryMethod_ExerciseSolutions.ipynb
@@ -131,7 +131,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import the function CountVectorizer\n",
