--- a/04-Dictionaries/01-ChiSquared_ExerciseSolutions.ipynb
+++ b/04-Dictionaries/01-ChiSquared_ExerciseSolutions.ipynb
@@ -232,9 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "columns = list(novels_df)\n",
@@ -287,7 +285,33 @@
    },
    "outputs": [],
    "source": [
-    "##For exercise code"
+    "columns = list(novels_df)\n",
+    "pearson_list = []\n",
+    "\n",
+    "for c in columns:\n",
+    "    pearson_list.append([c,((novels_df.loc[0,c]*1) + (novels_df.loc[1,c]*-1))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Words most associated with Jane Austen\n",
+    "pearson_list.sort(key=lambda x: x[1], reverse=True)\n",
+    "pearson_list[:50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Words most associated with Alcott\n",
+    "pearson_list.sort(key=lambda x: x[1], reverse=False)\n",
+    "pearson_list[:50]"
    ]
   }
  ],
