--- a/05-TextExploration/00-IntroductionToTopicModeling.ipynb
+++ b/05-TextExploration/00-IntroductionToTopicModeling.ipynb
@@ -8,6 +8,8 @@
     "  \n",
     "Today we'll implement the most basic, and the original, topic modeling algorithm, LDA, using Python's scikit-learn. The other major topic modeling package is Gensim. \n",
     "\n",
+    "Another option for topic modeling is the software MALLET. Check out this [blog post](https://de.dariah.eu/tatom/topic_model_mallet.html) to learn more about implementing MALLET.\n",
+    "\n",
     "### Learning Goals\n",
     "* Implement a basic topic modeling algorithm and learn how to tweak it\n",
     "* Learn how to use different methods to calculate topic prevalence\n",
@@ -61,6 +63,7 @@
    "source": [
     "import pandas\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "df_lit = pandas.read_csv(\"../Data/childrens_lit.csv.bz2\", sep='\\t', index_col=0, encoding = 'utf-8', compression='bz2')\n",
     "\n",
     "#drop rows where the text is missing.\n",
@@ -90,7 +93,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "####Adopted From: \n",
@@ -171,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "####Exercise:\n",
@@ -262,14 +269,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#EX: What is the average topic weight by author gender, for each topic?\n",
-    "### Which topic is most represented in texts by women? Most represented in texts by men?\n",
-    "### Which topic is least represented in texts by women? Least represented in texts by men?\n",
-    "### Grapth these results\n",
-    "#Hint: You can use the python 'range' function and a for-loop"
+    "### Grapth these results"
    ]
   },
   {
@@ -316,7 +322,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#create a for loop to do this for every topic"
@@ -328,6 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "topic_columns = range(0, n_topics)\n",
     "col_list = []\n",
     "for num in topic_columns:\n",
     "    col = \"%d_wc\" % num\n",
@@ -341,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#EX: What is the total number of words aligned with each topic, by author gender?\n",
@@ -368,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "###EX: \n",
