--- a/05-TextExploration/00-IntroductionToTopicModeling_ExerciseSolutions.ipynb
+++ b/05-TextExploration/00-IntroductionToTopicModeling_ExerciseSolutions.ipynb
@@ -55,13 +55,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "import pandas\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "df_lit = pandas.read_csv(\"../Data/childrens_lit.csv.bz2\", sep='\\t', index_col=0, encoding = 'utf-8', compression='bz2')\n",
     "\n",
     "#drop rows where the text is missing.\n",
@@ -122,9 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Vectorize our text using CountVectorizer\n",
@@ -140,9 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Fitting LDA models with tf features, \"\n",
@@ -163,9 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#print the top words per topic, using the function defined above.\n",
@@ -180,9 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "####Exercise:\n",
@@ -221,9 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "topic_dist = lda.transform(tf)\n",
@@ -240,9 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "topic_dist_df = pandas.DataFrame(topic_dist)\n",
@@ -264,7 +252,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -276,7 +263,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -287,16 +273,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#EX: What is the average topic weight by author gender, for each topic?\n",
-    "### Which topic is most represented in texts by women? Most represented in texts by men?\n",
-    "### Which topic is least represented in texts by women? Least represented in texts by men?\n",
     "### Grapth these results\n",
-    "#Hint: You can use the python 'range' function and a for-loop"
+    "#Hint: You can use the python 'range' function and a for-loop\n",
+    "\n",
+    "grouped_mean=df_w_topics.groupby('author gender').mean()\n",
+    "grouped_mean[[0,1,2,3]].plot(kind='bar')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -318,7 +304,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -332,9 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#multiple topic weight by word count\n",
@@ -357,11 +340,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "topic_columns = range(0, n_topics)\n",
     "col_list = []\n",
     "for num in topic_columns:\n",
     "    col = \"%d_wc\" % num\n",
@@ -375,41 +357,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#EX: What is the total number of words aligned with each topic, by author gender?\n",
-    "#EX: What is the proportion of total words aligned with each topic, by author gender?\n",
-    "topic_columns = range(0,4)\n",
-    "for num in topic_columns:\n",
-    "    print(num)\n",
     "    \n",
     "###Solution\n",
     "grouped = df_w_topics.groupby(\"author gender\")\n",
-    "for num in topic_columns:\n",
-    "    print(num)\n",
-    "    print(grouped[num].mean())\n"
+    "grouped.sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "fig1 = plt.figure()\n",
-    "chrt = 0\n",
-    "for num in topic_columns:\n",
-    "    chrt += 1 \n",
-    "    ax = fig1.add_subplot(2,3, chrt)\n",
-    "    grouped[num].mean().plot(kind = 'bar', yerr = grouped[num].std(), ylim=0, ax=ax, title=num)\n",
-    "\n",
-    "fig1.tight_layout()\n",
-    "plt.show()"
+    "#EX: What is the proportion of total words aligned with each topic, by author gender?\n",
+    "wc_columns = ['0_wc', '1_wc', '2_wc', '3_wc']\n",
+    "for n in wc_columns:\n",
+    "    print(n)\n",
+    "    print(grouped[n].sum()/grouped['word_count'].sum())"
    ]
   },
   {
@@ -432,9 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "###EX: \n",
@@ -451,9 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for e in topic_columns:\n",
@@ -479,9 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "grouped_year = df_w_topics.groupby('year')\n",
