--- a/05-TextExploration/02-VectorSpaceModel.ipynb
+++ b/05-TextExploration/02-VectorSpaceModel.ipynb
@@ -184,7 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##EX: \n",
@@ -355,7 +357,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text0 = 'I like to eat broccoli and bananas.'\n",
