--- a/00-Introduction/Installation_Check.ipynb
+++ b/00-Introduction/Installation_Check.ipynb
@@ -63,6 +63,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import string\n",
     "import numpy\n",
     "import matplotlib\n",
     "import pandas\n",
