--- a/00-Introduction/Installation_Check.ipynb
+++ b/00-Introduction/Installation_Check.ipynb
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "# every line that starts with a hash is a comment\n",
-    "# the computer ignores these lines, they are mean to address a human reader\n",
+    "# the computer ignores these lines, they are meant to address a human reader\n",
     "# here is some starter code to make sure everything is set up (don't worry about understanding everything here)\n",
     "for line in open('../Data/Austen_PrideAndPrejudice.txt'):\n",
     "    for word in line.split():\n",
