--- a/00-Introduction/Installation_Check.ipynb
+++ b/00-Introduction/Installation_Check.ipynb
@@ -171,7 +171,7 @@
    "source": [
     "If you double click on a markdown cell you will see the syntax behind the cell, and you can modify the cell.\n",
     "\n",
-    "Here are some basic formatting you might use in markdown. This is borrowed from [here](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet), which has more formatting tips. Google is also your friend, if you have a particular question about formatting in Markdown."
+    "Here are some basic formatting tags you might use in markdown. This is borrowed from [here](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet), which has more formatting tips. Google is also your friend, if you have a particular question about formatting in Markdown."
    ]
   },
   {
