--- a/01-IntroToPython/02-WorkingWithNumbers.ipynb
+++ b/01-IntroToPython/02-WorkingWithNumbers.ipynb
@@ -434,7 +434,7 @@
    "metadata": {},
    "source": [
     "<a id='exercise'></a>\n",
-    "## Summarzing Real Data"
+    "## Summarizing Real Data"
    ]
   },
   {
