--- a/00-Introduction/Installation_Check.ipynb
+++ b/00-Introduction/Installation_Check.ipynb
@@ -59,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -131,7 +133,7 @@
    "outputs": [],
    "source": [
     "# every line that starts with a hash is a comment\n",
-    "# the computer ignores these lines, they are mean to address a human reader\n",
+    "# the computer ignores these lines, they are meant to address a human reader\n",
     "# here is some starter code to make sure everything is set up (don't worry about understanding everything here)\n",
     "for line in open('../Data/Austen_PrideAndPrejudice.txt'):\n",
     "    for word in line.split():\n",
@@ -171,7 +173,7 @@
    "source": [
     "If you double click on a markdown cell you will see the syntax behind the cell, and you can modify the cell.\n",
     "\n",
-    "Here are some basic formatting you might use in markdown. This is borrowed from [here](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet), which has more formatting tips. Google is also your friend, if you have a particular question about formatting in Markdown."
+    "Here are some basic formatting tags you might use in markdown. This is borrowed from [here](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet), which has more formatting tips. Google is also your friend, if you have a particular question about formatting in Markdown."
    ]
   },
   {
