--- a/04-Dictionaries/00-DictionaryMethod.ipynb
+++ b/04-Dictionaries/00-DictionaryMethod.ipynb
@@ -21,7 +21,6 @@
     "* [Introduction to the Dictionary Method](#intro)\n",
     "* [Pre-Processing](#pre)\n",
     "* [Creating Dictionary Counts](#counts)\n",
-    "* [Sentiment Analysis using the Dictionary Method](#sentiment)\n",
     "* [Dictionary Method using Scikit-learn](#scikit)\n",
     "\n",
     "\n",
@@ -111,7 +110,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import the necessary packages\n",
@@ -150,7 +151,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#tokenize\n",
@@ -163,7 +166,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "punctuations = list(string.punctuation)\n",
@@ -187,7 +192,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['token_count'] = df['body_tokens'].apply(lambda x: len(x))\n",
@@ -215,7 +222,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pos_sent = open(\"../Data/positive_words.txt\", encoding='utf-8').read()\n",
@@ -228,7 +237,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#remember the split function? We'll split on the newline character (\\n) to create a list\n",
@@ -244,7 +255,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#count number of words in each list\n",
@@ -268,7 +281,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#exercise code here\n"
@@ -299,7 +314,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import the function CountVectorizer\n",
@@ -322,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#create a columns variable that is a list of all column names\n",
@@ -333,7 +352,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#create a new variable that contains only column names that are in our postive words list\n",
@@ -344,7 +365,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#create a dtm from our dtm_df that keeps only positive sentiment columns\n",
@@ -355,7 +378,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#count the number of positive words for each document\n",
