--- a/01-IntroToPython/02-WorkingWithNumbers.ipynb
+++ b/01-IntroToPython/02-WorkingWithNumbers.ipynb
@@ -280,9 +280,7 @@
    "source": [
     "## EX. Call up the entries (400 and BA) from the middle of the dataframe 'df' individually\n",
     "\n",
-    "## CHALLENGE: Call up both entries at the same time\n",
-    "\n",
-    "df.loc['Hovig'][['income', 'education']]\n"
+    "## CHALLENGE: Call up both entries at the same time"
    ]
   },
   {
