--- a/03-Pandas_and_DTM/00-PandasAndTextAnalysis.ipynb
+++ b/03-Pandas_and_DTM/00-PandasAndTextAnalysis.ipynb
@@ -75,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas\n",
@@ -100,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = df.dropna(subset=[\"text\"])\n",
@@ -110,13 +114,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##Ex: Print the first text in the dataframe (starts with \"A DOG WITH A BAD NAME\"). \n",
-    "###Hint: Remind yourself about the syntax for slicing a dataframe\n",
-    "\n",
-    "print(df.iloc[0, 3])"
+    "###Hint: Remind yourself about the syntax for slicing a dataframe"
    ]
   },
   {
@@ -137,7 +141,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(df.describe()) #get descriptive statistics for all numerical columns\n",
@@ -161,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#creat a pandas object that is a groupby dataframe, grouped on author gender\n",
@@ -179,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grouped_gender['text'].count().plot(kind = 'bar')\n",
@@ -189,14 +199,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Ex: Create a variable called 'grouped_year' that groups the dataframe by year.\n",
-    "## Print the number of texts per year.\n",
-    "\n",
-    "grouped_year = df.groupby('year')\n",
-    "grouped_year['text'].count()"
+    "## Print the number of texts per year."
    ]
   },
   {
@@ -209,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grouped_year['text'].count().plot(kind = 'line')\n",
@@ -226,7 +237,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.ticklabel_format(useOffset=False) #forces Python to not convert numbers\n",
@@ -263,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['text_lc'] = df['text'].str.lower()\n",
@@ -273,7 +288,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##Ex: create a new column, 'text_split', that contains the lower case text split into list. \n",
@@ -303,6 +320,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -321,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['word_count'].mean()"
@@ -337,7 +357,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "###Ex: print the average novel length for male authors and female authors.\n",
@@ -412,7 +434,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['title_tokens'] = df['title'].apply(nltk.word_tokenize)\n",
@@ -429,7 +453,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['title_tokens_clean'] = df['title_tokens'].apply(lambda x: [word for word in x if word not in list(string.punctuation)])\n",
@@ -454,7 +480,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "novels = df['text'].tolist()\n",
@@ -464,7 +492,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#turn all of the novels into one long string using the join function\n",
